# BTIEval

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml
BTIEval/: build.gradle  settings.gradle
BTIEval/ghidra_scripts/: DisableInitialDwarfImport.java  ExportBTIEvaluationData.java
BTIEval/src/main/java/btieval/: EvaluatedTypesCollector.java
BTIEval/src/main/java/btieval/core/: BTIEval.java
aggregate_evaluation_data/: Cargo.toml
aggregate_evaluation_data/src/: lib.rs
csmith_runner/: README.md  pyproject.toml
csmith_runner/csmith_runner/: main.py  reduce.py
csmith_runner/scripts/: interestingness_test_apply_types.sh  interestingness_test_eval_precision.sh
csmith_runner/tests/: test_csmith_runner.py
notes/: debugging_unified.md
scripts/sample_allstar/: pyproject.toml
scripts/sample_allstar/sample_allstar/: main.py  sample_bins.py
scripts/sample_allstar/tests/: test_sample_allstar.py
