[package]
name = "aggregate_evaluation_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_type_inference = { path = "../BTIGhidra/binary_type_inference/" }
clap = "~2.33"
env_logger = "0.9.0"
anyhow = "1.0"
alga = "0.9.3"
alga_derive = "0.9.2"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
petgraph = { version = "0.6", features = ["default", "serde-1"] }
